--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,15 +2,15 @@
   <div class="container">
     <table class="table table-branded" style="table-layout: auto; height: 40px; ">
       <tr>
-        <td> <a routerLink="/" class="logo">{{appTitle}}</a>
+        <td> <button routerLink="/" class="logo">{{appTitle}}</button>
         </td>
-        <td><a routerLink="/">Home</a></td>
-        <td><a routerLink="/about">About</a></td>
-        <td><a routerLink="/contact">Contact</a></td>
+        <td><button routerLink="/">Home</button></td>
+        <td><button routerLink="/about">About</button></td>
+        <td><button routerLink="/contact">Contact</button></td>
       </tr>
     </table>
   </div>
 
 
-  
+
 </header>
