--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,14 @@
 <div style="padding-left: 2.5%;">
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title">Home Page</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Services List</h6>
-    <p class="card-text">This page contains the list of services provided, along with links.</p>
-    <a routerLink="/register" class="card-link">Register</a>
-    <a routerLink="/login" class="card-link">Login</a>
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">Home Page</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Services List</h6>
+      <p class="card-text">This page contains the list of services provided, along with links.</p>
+      <button routerLink="/register" class="card-link">Register</button>
+      <button routerLink="/login" class="card-link">Login</button>
+    </div>
   </div>
+  <section>
+    <div class="snow1"></div>
+  </section>
 </div>
-<section>
-  <div class="snow1"></div>
-  </section></div>
