Imports sorted and using primeng table

--- a/src/app/adm-home/adm-home.component.html
+++ b/src/app/adm-home/adm-home.component.html
@@ -2,12 +2,12 @@
   Hi {{empName}}, <br>
   <table class="table table-bordered table-striped" style="width: 45%">
     <tr>
-      <td><button class="btn-primary" routerLink="/admWelcome/roomAllocate"> Room Allocate</button>
-      <td><button class="btn btn-success" routerLink="/admWelcome/employeeManagement">Manage Employees</button></td>
-      <td><button class="btn btn-success" routerLink="/admWelcome/amenity">Manage Amenities</button></td>
-      <td><button class="btn btn-success" routerLink="/admWelcome/tourPackage">Manage Tour Packages</button></td>
-      <td><button class="btn btn-success" routerLink="/admWelcome/roomManagement">Manage Rooms</button></td>
-      <td><button class="btn btn-success" routerLink="/admWelcome/lookupManagement">Manage Lookups</button></td>
+      <td><button class="btn btn-primary" routerLink="/admWelcome/roomAllocate"> Room Allocate</button>
+      <td><button class="btn btn-primary" routerLink="/admWelcome/employeeManagement">Manage Employees</button></td>
+      <td><button class="btn btn-primary" routerLink="/admWelcome/amenity">Manage Amenities</button></td>
+      <td><button class="btn btn-primary" routerLink="/admWelcome/tourPackage">Manage Tour Packages</button></td>
+      <td><button class="btn btn-primary" routerLink="/admWelcome/roomManagement">Manage Rooms</button></td>
+      <td><button class="btn btn-primary" routerLink="/admWelcome/lookupManagement">Manage Lookups</button></td>
     </tr>
   </table>
   <router-outlet></router-outlet>
