--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,8 +4,8 @@
       <h5 class="card-title">Home Page</h5>
       <h6 class="card-subtitle mb-2 text-muted">Services List</h6>
       <p class="card-text">This page contains the list of services provided, along with links.</p>
-      <button routerLink="/register" class="card-link">Register</button>
-      <button routerLink="/login" class="card-link">Login</button>
+      <button routerLink="/register" class="btn btn-primary card-link">Register</button>
+      <button routerLink="/login" class="btn btn-primary card-link">Login</button>
     </div>
   </div>
   <section>
