--- a/src/app/adm-home/lookup-management/lookup-management.component.html
+++ b/src/app/adm-home/lookup-management/lookup-management.component.html
@@ -9,8 +9,14 @@
 </div>
 <br>
 <br>
-<p-table [value]="lookupList">
-    <ng-template pTemplate="header">
+<p-table #tt *ngIf="viewAll && !createNew" [style]="{'width':'50%','margin-top':'8px'}" [value]="lookupList"
+    [paginator]="true" [rows]="10">
+    <ng-template pTemplate="caption">
+        <i class="pi pi-search" style="margin:4px 4px 0 0"></i>
+        <input type="text" pInputText size="50" placeholder="Global Filter"
+            (input)="tt.filterGlobal($event.target.value, 'contains')" style="width:auto">
+    </ng-template>
+    <ng-template pTemplate="header" let-columns>
         <tr>
             <th>Lookup Definition Name</th>
             <th>Lookup Value</th>
@@ -20,8 +26,25 @@
             <th>Deletion</th>
             <th>Update</th>
         </tr>
+        <tr>
+            <th *ngFor="let col of columns" [ngSwitch]="col.field">
+                <input *ngSwitchCase="'vin'" pInputText type="text"
+                    (input)="tt.filter($event.target.value, col.field, col.filterMatchMode)">
+                <div *ngSwitchCase="'year'">
+                    {{yearFilter}}
+                    <i class="pi pi-times"
+                        (click)="yearFilter=null;tt.filter(null, col.field, col.filterMatchMode)"></i>
+                    <p-slider [style]="{'width':'75%','margin-top':'8px'}" [(ngModel)]="yearFilter" [min]="1970"
+                        [max]="2010" (onChange)="onYearChange($event, dt)"></p-slider>
+                </div>
+                <p-dropdown *ngSwitchCase="'brand'" [options]="brands" [style]="{'width':'100%'}"
+                    (onChange)="tt.filter($event.value, col.field, 'equals')"></p-dropdown>
+                <p-multiSelect *ngSwitchCase="'color'" [options]="colors" defaultLabel="All Colors"
+                    (onChange)="tt.filter($event.value, col.field, 'in')"></p-multiSelect>
+            </th>
+        </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-lookup>
+    <!-- <ng-template pTemplate="body" let-lookup>
         <tr>
             <td>{{lookup.lookupDefName}}</td>
             <td>{{lookup.lookupValue}}</td>
@@ -33,49 +56,69 @@
                     <div *ngIf="lookup.deleted != 'Y'">Delete</div>
                     <div *ngIf="lookup.deleted === 'Y'">Undelete</div>
                 </button>
-
             </td>
             <td>
                 <button class="btn-primary" (click)="updateRecord(lookup.lookupId)">Update</button>
             </td>
+        </tr>
+    </ng-template> -->
+    <ng-template pTemplate="body" let-lookup let-editing="editing" let-ri="rowIndex">
+        <tr [pEditableRow]="lookup">
+            <td pEditableColumn>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <p-dropdown [options]="lookupDefinitions" [(ngModel)]="lookup.lookupDefName"
+                            [style]="{'width':'100%'}">
+                        </p-dropdown>
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{lookup.lookupDefName}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td pEditableColumn>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input pInputText type="text" [(ngModel)]="lookup.lookupValue" lookupValue>
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{lookup.lookupValue}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td pEditableColumn>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input pInputText type="text" [(ngModel)]="lookup.displayName" displayName>
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{lookup.displayName}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td pEditableColumn>
+                {{lookup.createdDate === null ? "" : lookup.createdDate| date:'dd MMM, yyyy'}}
+            </td>
+            <td pEditableColumn>{{lookup.updateDate === null ? "" : lookup.updateDate| date:'dd MMM, yyyy'}}</td>
+            <td style="text-align:center">
+                <button class="btn-primary" (click)="toggleDelete(lookup.lookupId)">
+                    <div *ngIf="lookup.deleted != 'Y'">Delete</div>
+                    <div *ngIf="lookup.deleted === 'Y'">Undelete</div>
+                </button>
+                <button *ngIf="!editing" pButton type="button" pInitEditableRow icon="pi pi-pencil"
+                    class="ui-button-info" (click)="onRowEditInit(lookup)"></button>
+                <button *ngIf="editing" pButton type="button" pSaveEditableRow icon="pi pi-check"
+                    class="ui-button-success" style="margin-right: .5em" (click)="onRowEditSave(lookup)"></button>
+                <button *ngIf="editing" pButton type="button" pCancelEditableRow icon="pi pi-times"
+                    class="ui-button-danger" (click)="onRowEditCancel(lookup, ri)"></button>
+            </td>
+            <td><button class="btn-primary" (click)="updateRecord(lookup.lookupId)">Update</button></td>
         </tr>
     </ng-template>
 </p-table>
 
 
-<table *ngIf="viewAll && !createNew" class="table table-bordered table-striped"
-    style="width: 75%; background:lightblue">
-    <thead>
-        <tr>
-            <th>Lookup Definition Name</th>
-            <th>Lookup Value</th>
-            <th>Lookup Display Name</th>
-            <th>Created Date</th>
-            <th>Update Date</th>
-            <th>Deletion</th>
-            <th>Update</th>
-        </tr>
-    </thead>
-    <tbody *ngIf="lookupList.length > 0">
-        <tr *ngFor="let lookup of lookupList">
-            <td>{{lookup.lookupDefName}}</td>
-            <td>{{lookup.lookupValue}}</td>
-            <td>{{lookup.displayName}}</td>
-            <td>{{lookup.createdDate === null ? "" : lookup.createdDate| date:'dd MMM, yyyy'}}</td>
-            <td>{{lookup.updateDate === null ? "" : lookup.updateDate| date:'dd MMM, yyyy'}}</td>
-            <td>
-                <button class="btn-primary" (click)="toggleDelete(lookup.lookupId)">
-                    <div *ngIf="lookup.deleted != 'Y'">Delete</div>
-                    <div *ngIf="lookup.deleted === 'Y'">Undelete</div>
-                </button>
 
-            </td>
-            <td>
-                <button class="btn-primary" (click)="updateRecord(lookup.lookupId)">Update</button>
-            </td>
-        </tr>
-    </tbody>
-</table>
 <br>
 <br>
 <div>
