Subject and reducing usage of queryParams and primng icons

--- a/src/app/cust-home/cust-home.component.html
+++ b/src/app/cust-home/cust-home.component.html
@@ -1,4 +1,5 @@
 Hey {{custName}}!!! What would you like to do now? <br>
+<i class="pi pi-sign-out"></i>
 <table class="table table-bordered table-striped" style="width: 45%">
   <tr>
     <td><button class="btn btn-primary" (click)="registerRoom(custName,userName);">Room Registration</button></td>
