--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,11 @@ body{
     background-image: url('assets/bnc.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+     /* Set a specific height */
+  height: 500px;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
     }
         
 #container {
