--- a/src/app/common/sidebar/sidebar.component.scss
+++ b/src/app/common/sidebar/sidebar.component.scss
@@ -1,5 +1,5 @@
 nav {
-    background: #2d2e2e;
+    background: black;
     height: 100%;
     ul {
         list-style-type: none;
@@ -12,9 +12,9 @@ nav {
             padding: 20px;
             display: block;
             }
-                .activated {
-                    background-color: #00a8ff;
-                }
+            .activated {
+            color: #00a8ff;
+            }
             
         }
     }
@@ -23,7 +23,7 @@ nav {
 
 
 
-i.material-icons:hover {
+i:hover {
     background-color: transparent;
     transform: rotate(90deg);
     cursor: pointer;
