--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -8,9 +8,10 @@
       <button href="https://www.facebook.com/aditya.vijay.9279" class="cardxs-link"><img
           src="https://img.icons8.com/material/24/000000/facebook.png"></button>
       <button href="https://www.linkedin.com/in/vijay-pidaparthi-02a1a974/" class="card-link"><img
-          src="https://img.icons8.com/material-outlined/24/000000/linkedin.png"></button><button
-        href="mailto:pidaparthivijayaditya@gmail.com" class="card-link"><i class="material-icons">email</i></button><br>
-      <i class="material-icons">call</i>7823944217 , 9493444225
+          src="https://img.icons8.com/material-outlined/24/000000/linkedin.png"></button>
+      <button href="mailto:pidaparthivijayaditya@gmail.com" class="card-link"><i class="pi pi-envelope"></i></button>
+      <br>
+      <i class="pi pi-mobile"></i>7823944217 , 9493444225
     </div>
   </div>
 </div>
