--- a/src/app/room-management/room-management.component.html
+++ b/src/app/room-management/room-management.component.html
@@ -34,8 +34,8 @@
           <select formControlName="modelOfRoom" class="form-control"
             [ngClass]="{ 'is-invalid': submitted && f.modelOfRoom.errors }">
             <option value="">--Select--</option>
-            <option value="deluxe">Deluxe</option>
-            <option value="suite">Suite</option>
+            <option value="DLX">Deluxe</option>
+            <option value="STE">Suite</option>
           </select>
         </td>
       </tr>
