--- a/src/app/adm-home/lookup-management/lookup-management.component.html
+++ b/src/app/adm-home/lookup-management/lookup-management.component.html
@@ -10,58 +10,43 @@
 <br>
 <br>
 <p-table #tt *ngIf="viewAll && !createNew" [style]="{'width':'50%','margin-top':'8px'}" [value]="lookupList"
-    [paginator]="true" [rows]="10">
+    [globalFilterFields]="[columns]" [paginator]=" true" [rows]="10">
     <ng-template pTemplate="caption">
         <i class="pi pi-search" style="margin:4px 4px 0 0"></i>
         <input type="text" pInputText size="50" placeholder="Global Filter"
             (input)="tt.filterGlobal($event.target.value, 'contains')" style="width:auto">
     </ng-template>
-    <ng-template pTemplate="header" let-columns>
+    <ng-template pTemplate="header">
         <tr>
-            <th>Lookup Definition Name</th>
-            <th>Lookup Value</th>
-            <th>Lookup Display Name</th>
-            <th>Created Date</th>
-            <th>Update Date</th>
-            <th>Deletion</th>
+            <th pSortableColumn="lookupDefName">Lookup Definition Name<p-sortIcon field="lookupDefName"></p-sortIcon>
+            </th>
+            <th pSortableColumn="lookupValue">Lookup Value<p-sortIcon field="lookupValue"></p-sortIcon>
+            </th>
+            <th pSortableColumn="displayName">Lookup Display Name<p-sortIcon field="displayName"></p-sortIcon>
+            <th pSortableColumn="createdDate">Created Date<p-sortIcon field="createdDate"></p-sortIcon>
+            <th pSortableColumn="updatedDate">Update Date<p-sortIcon field="updatedDate"></p-sortIcon>
+            <th>Action</th>
             <th>Update</th>
         </tr>
         <tr>
-            <th *ngFor="let col of columns" [ngSwitch]="col.field">
-                <input *ngSwitchCase="'vin'" pInputText type="text"
-                    (input)="tt.filter($event.target.value, col.field, col.filterMatchMode)">
-                <div *ngSwitchCase="'year'">
-                    {{yearFilter}}
-                    <i class="pi pi-times"
-                        (click)="yearFilter=null;tt.filter(null, col.field, col.filterMatchMode)"></i>
-                    <p-slider [style]="{'width':'75%','margin-top':'8px'}" [(ngModel)]="yearFilter" [min]="1970"
-                        [max]="2010" (onChange)="onYearChange($event, dt)"></p-slider>
-                </div>
-                <p-dropdown *ngSwitchCase="'brand'" [options]="brands" [style]="{'width':'100%'}"
-                    (onChange)="tt.filter($event.value, col.field, 'equals')"></p-dropdown>
-                <p-multiSelect *ngSwitchCase="'color'" [options]="colors" defaultLabel="All Colors"
-                    (onChange)="tt.filter($event.value, col.field, 'in')"></p-multiSelect>
+            <th>
+                <input pInputText type="text" (input)="tt.filter($event.target.value, 'lookupDefName', 'contains')"
+                    placeholder="Definition Name" class="p-column-filter">
             </th>
+            <th>
+                <input pInputText type="text" (input)="tt.filter($event.target.value, 'lookupValue', 'contains')"
+                    placeholder="Value" class="p-column-filter">
+            </th>
+            <th>
+                <input pInputText type="text" (input)="tt.filter($event.target.value, 'displayName', 'contains')"
+                    placeholder="Display Name" class="p-column-filter">
+            </th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
         </tr>
     </ng-template>
-    <!-- <ng-template pTemplate="body" let-lookup>
-        <tr>
-            <td>{{lookup.lookupDefName}}</td>
-            <td>{{lookup.lookupValue}}</td>
-            <td>{{lookup.displayName}}</td>
-            <td>{{lookup.createdDate === null ? "" : lookup.createdDate| date:'dd MMM, yyyy'}}</td>
-            <td>{{lookup.updateDate === null ? "" : lookup.updateDate| date:'dd MMM, yyyy'}}</td>
-            <td>
-                <button class="btn-primary" (click)="toggleDelete(lookup.lookupId)">
-                    <div *ngIf="lookup.deleted != 'Y'">Delete</div>
-                    <div *ngIf="lookup.deleted === 'Y'">Undelete</div>
-                </button>
-            </td>
-            <td>
-                <button class="btn-primary" (click)="updateRecord(lookup.lookupId)">Update</button>
-            </td>
-        </tr>
-    </ng-template> -->
     <ng-template pTemplate="body" let-lookup let-editing="editing" let-ri="rowIndex">
         <tr [pEditableRow]="lookup">
             <td pEditableColumn>
@@ -105,15 +90,10 @@
                     <div *ngIf="lookup.deleted != 'Y'">Delete</div>
                     <div *ngIf="lookup.deleted === 'Y'">Undelete</div>
                 </button>
-                <button *ngIf="!editing" pButton type="button" pInitEditableRow icon="pi pi-pencil"
-                    class="ui-button-info btn-primary" (click)="onRowEditInit(lookup)">Edit</button>
-                <button *ngIf="editing" pButton type="button" pSaveEditableRow icon="pi pi-check"
-                    class="ui-button-success btn-primary" style="margin-right: .5em"
-                    (click)="onRowEditSave(lookup)">Save</button>
                 <button *ngIf="editing" pButton type="button" pCancelEditableRow icon="pi pi-times"
                     class="ui-button-danger btn-primary" (click)="onRowEditCancel(lookup, ri)">Cancel</button>
             </td>
-            <td><button class="btn-primary" (click)="updateRecord(lookup.lookupId)">Update</button></td>
+            <td><button class="btn-primary" (click)="updateLookup(lookup)">Update</button></td>
         </tr>
     </ng-template>
 </p-table>
