--- a/src/app/adm-home/amenity-management/amenity-management.component.html
+++ b/src/app/adm-home/amenity-management/amenity-management.component.html
@@ -2,38 +2,77 @@
 <button class="btn-primary" (click)="createNewAmenity()">New Amenity</button>
 <br>
 <br>
-<div *ngIf="!newAmenity && viewAmenities" class="center">
-    <table class="table table-striped table-bordered" style="width: 50%; background:#ff54">
-        <thead>
-            <tr>
-                <th>Amenity Id</th>
-                <th>Amenity Name</th>
-                <th>Price Per Day</th>
-                <th>Deleted</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let amenity of amenitiesList">
-                <td>{{amenity.amenityId}}</td>
-                <td>{{amenity.amenityName}}</td>
-                <td>
-                    <input type="number" min="100" name="price" id="price{{amenity.amenityName}}"
-                        value={{amenity.price}}>
-                </td>
-                <td>
-                    <button class="btn-primary" (click)="toggleDelete(amenity.amenityName)">
-                        <div *ngIf="amenity.deleted != 'Y'">Delete</div>
-                        <div *ngIf="amenity.deleted === 'Y'">Undelete</div>
-                    </button>
-                </td>
-                <td><button class="btn-primary" (click)="updatePrice(amenity.amenityName)">
-                        Update Price</button></td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-
+<p-table #amenityTable *ngIf="!newAmenity && viewAmenities" [style]="{'width':'50%','margin-top':'8px'}"
+    [value]="amenitiesList" [globalFilterFields]="[columns]" [paginator]=" true" [rows]="10">
+    <ng-template pTemplate="caption">
+        <i class="pi pi-search" style="margin:4px 4px 0 0"></i>
+        <input type="text" pInputText size="50" placeholder="Global Filter"
+            (input)="amenityTable.filterGlobal($event.target.value, 'contains')" style="width:auto">
+    </ng-template>
+    <ng-template pTemplate="header">
+        <tr>
+            <th pSortableColumn="amenityId">Amenity Id<p-sortIcon field="amenityId"></p-sortIcon>
+            </th>
+            <th pSortableColumn="amenityName">Amenity Name<p-sortIcon field="amenityName"></p-sortIcon>
+            </th>
+            <th pSortableColumn="price">Price Per Day<p-sortIcon field="price"></p-sortIcon>
+            </th>
+            <th>Deleted</th>
+            <th>Action</th>
+        </tr>
+        <tr>
+            <th>
+                <input pInputText type="text"
+                    (input)="amenityTable.filter($event.target.value, 'amenityId', 'contains')" placeholder="Amenity Id"
+                    class="p-column-filter">
+            </th>
+            <th>
+                <input pInputText type="text"
+                    (input)="amenityTable.filter($event.target.value, 'amenityName', 'contains')" placeholder="Name"
+                    class="p-column-filter">
+            </th>
+            <th>
+                <input pInputText type="text" (input)="amenityTable.filter($event.target.value, 'price', 'contains')"
+                    placeholder="Price Per Day" class="p-column-filter">
+            </th>
+            <th></th>
+            <th></th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-amenity let-editing="editing" let-ri="rowIndex">
+        <tr [pEditableRow]="amenity">
+            <td>{{amenity.amenityId}}</td>
+            <td pEditableColumn>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input pInputText type="text" [(ngModel)]="amenity.amenityName" amenityName>
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{amenity.amenityName}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td pEditableColumn>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input pInputText type="number" min="100" [(ngModel)]="amenity.price" amenityPrice>
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{amenity.price}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td>
+                <button class="btn-primary" (click)="toggleDelete(amenity.amenityName)">
+                    <div *ngIf="amenity.deleted != 'Y'">Delete</div>
+                    <div *ngIf="amenity.deleted === 'Y'">Undelete</div>
+                </button>
+            </td>
+            <td><button class="btn-primary" (click)="updateAmenity(amenity)">
+                    Update</button></td>
+        </tr>
+    </ng-template>
+</p-table>
 <div class="center" *ngIf="newAmenity && !viewAmenities">
     <form [formGroup]="amenityRegistrationForm" (ngSubmit)="createAmenity()">
         <table class="table table-striped table-hover" style="width: 25rem;">
