--- a/src/app/adm-home/lookup-management/lookup-management.component.html
+++ b/src/app/adm-home/lookup-management/lookup-management.component.html
@@ -9,12 +9,12 @@
 </div>
 <br>
 <br>
-<p-table #tt *ngIf="viewAll && !createNew" [style]="{'width':'50%','margin-top':'8px'}" [value]="lookupList"
+<p-table #lookupTable *ngIf="viewAll && !createNew" [style]="{'width':'50%','margin-top':'8px'}" [value]="lookupList"
     [globalFilterFields]="[columns]" [paginator]=" true" [rows]="10">
     <ng-template pTemplate="caption">
         <i class="pi pi-search" style="margin:4px 4px 0 0"></i>
         <input type="text" pInputText size="50" placeholder="Global Filter"
-            (input)="tt.filterGlobal($event.target.value, 'contains')" style="width:auto">
+            (input)="lookupTable.filterGlobal($event.target.value, 'contains')" style="width:auto">
     </ng-template>
     <ng-template pTemplate="header">
         <tr>
@@ -30,15 +30,18 @@
         </tr>
         <tr>
             <th>
-                <input pInputText type="text" (input)="tt.filter($event.target.value, 'lookupDefName', 'contains')"
+                <input pInputText type="text"
+                    (input)="lookupTable.filter($event.target.value, 'lookupDefName', 'contains')"
                     placeholder="Definition Name" class="p-column-filter">
             </th>
             <th>
-                <input pInputText type="text" (input)="tt.filter($event.target.value, 'lookupValue', 'contains')"
-                    placeholder="Value" class="p-column-filter">
+                <input pInputText type="text"
+                    (input)="lookupTable.filter($event.target.value, 'lookupValue', 'contains')" placeholder="Value"
+                    class="p-column-filter">
             </th>
             <th>
-                <input pInputText type="text" (input)="tt.filter($event.target.value, 'displayName', 'contains')"
+                <input pInputText type="text"
+                    (input)="lookupTable.filter($event.target.value, 'displayName', 'contains')"
                     placeholder="Display Name" class="p-column-filter">
             </th>
             <th></th>
@@ -97,13 +100,9 @@
         </tr>
     </ng-template>
 </p-table>
-
-
-
 <br>
 <br>
 <div>
-
     <form [formGroup]="loookupCreationForm" (ngSubmit)="createLookup()">
         <table *ngIf="!viewAll && createNew" class="table table-bordered table-striped"
             style="width: 75%; background:lightblue">
