--- a/src/app/adm-home/tour-management/tour-management.component.html
+++ b/src/app/adm-home/tour-management/tour-management.component.html
@@ -2,37 +2,128 @@
 <button class="btn-primary" (click)="newTourPackage()">New Tour Packages</button>
 <br>
 <br>
-<div *ngIf="!newPackage && viewPackages" class="center">
+<p-table #tourPackageTable *ngIf="!newPackage && viewPackages" [style]="{'width':'50%','margin-top':'8px'}"
+    [value]="tourPackagesList" [globalFilterFields]="[columns]" [paginator]=" true" [rows]="10">
+    <ng-template pTemplate="caption">
+        <i class="pi pi-search" style="margin:4px 4px 0 0"></i>
+        <input type="text" pInputText size="50" placeholder="Global Filter"
+            (input)="tourPackageTable.filterGlobal($event.target.value, 'contains')" style="width:auto">
+    </ng-template>
+    <ng-template pTemplate="header">
+        <tr>
+            <th pSortableColumn="tourPackageId">Package Id<p-sortIcon field="tourPackageId"></p-sortIcon>
+            </th>
+            <th pSortableColumn="tourPackageName">Package Name<p-sortIcon field="tourPackageName"></p-sortIcon>
+            </th>
+            <th pSortableColumn="location">Location<p-sortIcon field="location"></p-sortIcon>
+            </th>
+            <th pSortableColumn="duration">Duration<p-sortIcon field="duration"></p-sortIcon>
+            </th>
+            <th pSortableColumn="pricePerHead">Price Per Head<p-sortIcon field="pricePerHead"></p-sortIcon>
+            </th>
+            <th>Deleted</th>
+            <th>Action</th>
+        </tr>
+        <tr>
+            <th>
+                <input pInputText type="text"
+                    (input)="tourPackageTable.filter($event.target.value, 'tourPackageId', 'contains')"
+                    placeholder="TourPackage Id" class="p-column-filter">
+            </th>
+            <th>
+                <input pInputText type="text"
+                    (input)="tourPackageTable.filter($event.target.value, 'tourPackageName', 'contains')"
+                    placeholder="Name" class="p-column-filter">
+            </th>
+            <th>
+                <input pInputText type="text"
+                    (input)="tourPackageTable.filter($event.target.value, 'location', 'contains')"
+                    placeholder="Location" class="p-column-filter">
+            </th>
+            <th>
+                <input pInputText type="text"
+                    (input)="tourPackageTable.filter($event.target.value, 'duration', 'contains')"
+                    placeholder="Duration" class="p-column-filter">
+            </th>
+            <th>
+                <input pInputText type="text"
+                    (input)="tourPackageTable.filter($event.target.value, 'pricePerHead', 'contains')"
+                    placeholder="Price Per Day" class="p-column-filter">
+            </th>
+            <th></th>
+            <th></th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-tourPackage let-editing="editing" let-ri="rowIndex">
+        <tr [pEditableRow]="tourPackage">
+            <td>{{tourPackage.tourPackageId}}</td>
+            <td pEditableColumn>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input pInputText type="text" [(ngModel)]="tourPackage.tourPackageName" tourPackageName>
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{tourPackage.tourPackageName}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td pEditableColumn>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input pInputText type="text" [(ngModel)]="tourPackage.location" location>
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{tourPackage.location}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td pEditableColumn>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input pInputText type="text" [(ngModel)]="tourPackage.duration" duration>
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{tourPackage.duration}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td pEditableColumn>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input pInputText type="number" min="2500" name="pricePerHead"
+                            [(ngModel)]="tourPackage.pricePerHead" tourPackagePrice>
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{tourPackage.pricePerHead}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td>
+                <button class="btn-primary" (click)="toggleDelete(tourPackage.tourPackageName)">
+                    <div *ngIf="tourPackage.deleted != 'Y'">Delete</div>
+                    <div *ngIf="tourPackage.deleted === 'Y'">Undelete</div>
+                </button>
+            </td>
+            <td><button class="btn-primary" (click)="updateTourPackage(tourPackage)">
+                    Update</button></td>
+
+        </tr>
+    </ng-template>
+</p-table>
+<div *ngIf="" class="center">
     <table class="table table-striped table-bordered" style="width: 70%; background:#ff54">
         <thead>
             <tr>
-                <th>Package Id</th>
-                <th>Package Name</th>
-                <th>Location</th>
-                <th>Duration</th>
-                <th>Price Per Head</th>
-                <th>Deleted</th>
-                <th>Action</th>
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let tourPackage of tourPackagesList">
                 <td>{{tourPackage.tourPackageId}}</td>
                 <td>{{tourPackage.tourPackageName}}</td>
-                <td>{{tourPackage.location}}</td>
-                <td>{{tourPackage.duration}}</td>
                 <td>
-                    <input type="number" min="2500" name="pricePerHead" id="pricePerHead{{tourPackage.tourPackageName}}"
-                        value={{tourPackage.pricePerHead}}>
                 </td>
                 <td>
-                    <button class="btn-primary" (click)="toggleDelete(tourPackage.tourPackageName)">
-                        <div *ngIf="tourPackage.deleted != 'Y'">Delete</div>
-                        <div *ngIf="tourPackage.deleted === 'Y'">Undelete</div>
-                    </button>
                 </td>
-                <td><button class="btn-primary" (click)="updatePrice(tourPackage.tourPackageName)">
-                        Update Price</button></td>
             </tr>
         </tbody>
     </table>
