--- a/src/app/adm-home/lookup-management/lookup-management.component.html
+++ b/src/app/adm-home/lookup-management/lookup-management.component.html
@@ -10,7 +10,9 @@
 <br>
 <br>
 <p-table #lookupTable *ngIf="viewAll && !createNew" [style]="{'width':'50%','margin-top':'8px'}" [value]="lookupList"
-    [globalFilterFields]="[columns]" [paginator]=" true" [rows]="10">
+    [globalFilterFields]="['lookupDefName','lookupValue','displayName']" [paginator]="true"
+    [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+    [rowsPerPageOptions]="[5, 10,15]" [rows]="10">
     <ng-template pTemplate="caption">
         <i class="pi pi-search" style="margin:4px 4px 0 0"></i>
         <input type="text" pInputText size="50" placeholder="Global Filter"
@@ -24,7 +26,7 @@
             </th>
             <th pSortableColumn="displayName">Lookup Display Name<p-sortIcon field="displayName"></p-sortIcon>
             <th pSortableColumn="createdDate">Created Date<p-sortIcon field="createdDate"></p-sortIcon>
-            <th pSortableColumn="updatedDate">Update Date<p-sortIcon field="updatedDate"></p-sortIcon>
+            <th pSortableColumn="updatedDate">Updated Date<p-sortIcon field="updatedDate"></p-sortIcon>
             <th>Action</th>
             <th>Update</th>
         </tr>
