--- a/src/app/adm-home/employee-management/employee-management.component.html
+++ b/src/app/adm-home/employee-management/employee-management.component.html
@@ -63,3 +63,99 @@
         </table>
     </form>
 </div>
+<p-table #employeeTable *ngIf="employeesList?.length" [style]="{'width':'70%','margin-top':'8px'}"
+    [value]="employeesList" [globalFilterFields]="['empId','empName','empGen','email','userName']" [paginator]="true"
+    [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+    [rowsPerPageOptions]="[5, 10,15]" [rows]="10">
+    <ng-template pTemplate="caption">
+        <i class="pi pi-search" style="margin:4px 4px 0 0"></i>
+        <input type="text" pInputText size="50" placeholder="Global Filter"
+            (input)="employeeTable.filterGlobal($event.target.value, 'contains')" style="width:auto">
+    </ng-template>
+    <ng-template pTemplate="header">
+        <tr style="width: inherit">
+            <th pSortableColumn="empId">Employee Id<p-sortIcon field="empId"></p-sortIcon>
+            </th>
+            <th pSortableColumn="empName">Employee Name<p-sortIcon field="empName"></p-sortIcon>
+            </th>
+            <th pSortableColumn="empGen">Gender<p-sortIcon field="empGen"></p-sortIcon>
+            </th>
+            <th pSortableColumn="email">Email<p-sortIcon field="email"></p-sortIcon>
+            </th>
+            <th pSortableColumn="userName">User Name<p-sortIcon field="userName"></p-sortIcon>
+            </th>
+            <th>Action</th>
+        </tr>
+        <tr>
+            <th>
+                <input pInputText type="text" (input)="employeeTable.filter($event.target.value, 'empId', 'contains')"
+                    placeholder="Employee Id" class="p-column-filter">
+            </th>
+            <th>
+                <input pInputText type="text" (input)="employeeTable.filter($event.target.value, 'empName', 'contains')"
+                    placeholder="Employee Name" class="p-column-filter">
+            </th>
+            <th>
+                <input pInputText type="text" (input)="employeeTable.filter($event.target.value, 'empGen', 'contains')"
+                    placeholder="Gender" class="p-column-filter">
+            </th>
+            <th>
+                <input pInputText type="text" (input)="employeeTable.filter($event.target.value, 'email', 'contains')"
+                    placeholder="Email" class="p-column-filter">
+            </th>
+            <th>
+                <input pInputText type="text"
+                    (input)="employeeTable.filter($event.target.value, 'userName', 'contains')" placeholder="User Name"
+                    class="p-column-filter">
+            </th>
+            <th></th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-employee let-editing="editing" let-ri="rowIndex">
+        <tr [pEditableRow]="employee">
+            <td>{{employee.empId}}</td>
+            <td pEditableColumn>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input pInputText type="text" [(ngModel)]="employee.empName" empName>
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{employee.empName}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td pEditableColumn>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input pInputText [(ngModel)]="employee.empGen" empGen>
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{employee.empGen}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td pEditableColumn>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input pInputText [(ngModel)]="employee.email" email>
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{employee.email}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td pEditableColumn>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input pInputText min="100" [(ngModel)]="employee.userName" userName>
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{employee.userName}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td><button class="btn-primary" (click)="updateEmployee(employee)">
+                    Update</button></td>
+        </tr>
+    </ng-template>
+</p-table>
