--- a/src/app/adm-home/tour-management/tour-management.component.html
+++ b/src/app/adm-home/tour-management/tour-management.component.html
@@ -3,7 +3,9 @@
 <br>
 <br>
 <p-table #tourPackageTable *ngIf="!newPackage && viewPackages" [style]="{'width':'50%','margin-top':'8px'}"
-    [value]="tourPackagesList" [globalFilterFields]="[columns]" [paginator]=" true" [rows]="10">
+    [value]="tourPackagesList" [paginator]="true" [rowsPerPageOptions]="[5, 10,15]" [rows]="10"
+    [globalFilterFields]="['tourPackageId','tourPackageName','location','duration','pricePerHead']"
+    [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
     <ng-template pTemplate="caption">
         <i class="pi pi-search" style="margin:4px 4px 0 0"></i>
         <input type="text" pInputText size="50" placeholder="Global Filter"
