--- a/src/app/room-management/room-management.component.html
+++ b/src/app/room-management/room-management.component.html
@@ -5,7 +5,6 @@
     <td><button class="btn btn-success" (click)="getAllRooms()">Query All Rooms</button></td>
     <td><button class="btn btn-success" (click)="getRoomsByStatus(constants.VACANT)">Query Free Rooms</button></td>
     <td><button class="btn btn-success" (click)="getRoomsByStatus(constants.OCCUPIED)">Query Booked Rooms</button></td>
-    <td><button class="btn btn-success" (click)="getRoomsByFloor()">Query Rooms By Floor</button></td>
   </tr>
 </table>
 <form [formGroup]="createRoomForm" (ngSubmit)="createRoom()">
@@ -76,10 +75,100 @@
     </tbody>
   </table>
 </form>
-<table class="table table-bordered">
-  <tr>
-    <td *ngFor="let room of roomsList" class="{{room.roomStatus===constants.VACANT?'free':'filled'}}">
-      {{room.roomNumber}}
-    </td>
-  </tr>
-</table>
+
+<p-table #roomTable *ngIf="roomsList?.length" [style]="{'width':'70%','margin-top':'8px'}" [value]="roomsList"
+  [globalFilterFields]="['roomNumber','floorNumber','roomCategory','roomModel','roomType']" [paginator]="true"
+  [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+  [rowsPerPageOptions]="[5, 10,15]" [rows]="10">
+  <ng-template pTemplate="caption">
+    <i class="pi pi-search" style="margin:4px 4px 0 0"></i>
+    <input type="text" pInputText size="50" placeholder="Global Filter"
+      (input)="roomTable.filterGlobal($event.target.value, 'contains')" style="width:auto">
+  </ng-template>
+  <ng-template pTemplate="header">
+    <tr style="width: inherit">
+      <th pSortableColumn="roomNumber">Room Number<p-sortIcon field="roomNumber"></p-sortIcon>
+      </th>
+      <th pSortableColumn="floorNumber">Floor Number<p-sortIcon field="floorNumber"></p-sortIcon>
+      </th>
+      <th pSortableColumn="roomCategory">Category<p-sortIcon field="roomCategory"></p-sortIcon>
+      </th>
+      <th pSortableColumn="roomModel">Model<p-sortIcon field="roomModel"></p-sortIcon>
+      </th>
+      <th pSortableColumn="roomType">Type<p-sortIcon field="roomType"></p-sortIcon>
+      </th>
+      <th>Action</th>
+    </tr>
+    <tr>
+      <th>
+        <input pInputText type="text" (input)="roomTable.filter($event.target.value, 'roomNumber', 'contains')"
+          placeholder="Room Number" class="p-column-filter">
+      </th>
+      <th>
+        <input pInputText type="text" (input)="roomTable.filter($event.target.value, 'floorNumber', 'contains')"
+          placeholder="Floor Number" class="p-column-filter">
+      </th>
+      <th>
+        <input pInputText type="text" (input)="roomTable.filter($event.target.value, 'roomCategory', 'contains')"
+          placeholder="Category" class="p-column-filter">
+      </th>
+      <th>
+        <input pInputText type="text" (input)="roomTable.filter($event.target.value, 'roomModel', 'contains')"
+          placeholder="Model" class="p-column-filter">
+      </th>
+      <th>
+        <input pInputText type="text" (input)="roomTable.filter($event.target.value, 'roomType', 'contains')"
+          placeholder="Type" class="p-column-filter">
+      </th>
+      <th></th>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-room let-editing="editing" let-ri="rowIndex">
+    <tr [ngClass]="{'free': room.roomStatus===constants.VACANT, 'filled':room.roomStatus===constants.OCCUPIED}"
+      [pEditableRow]="room">
+      <td>{{room.roomNumber}}</td>
+      <td pEditableColumn>
+        <p-cellEditor>
+          <ng-template pTemplate="input">
+            <input pInputText type="number" [(ngModel)]="room.floorNumber" floorNumber>
+          </ng-template>
+          <ng-template pTemplate="output">
+            {{room.floorNumber}}
+          </ng-template>
+        </p-cellEditor>
+      </td>
+      <td pEditableColumn>
+        <p-cellEditor>
+          <ng-template pTemplate="input">
+            <input pInputText min="100" [(ngModel)]="room.roomCategory" roomCategory>
+          </ng-template>
+          <ng-template pTemplate="output">
+            {{room.roomCategory}}
+          </ng-template>
+        </p-cellEditor>
+      </td>
+      <td pEditableColumn>
+        <p-cellEditor>
+          <ng-template pTemplate="input">
+            <input pInputText min="100" [(ngModel)]="room.roomModel" roomModel>
+          </ng-template>
+          <ng-template pTemplate="output">
+            {{room.roomModel}}
+          </ng-template>
+        </p-cellEditor>
+      </td>
+      <td pEditableColumn>
+        <p-cellEditor>
+          <ng-template pTemplate="input">
+            <input pInputText min="100" [(ngModel)]="room.roomType" roomType>
+          </ng-template>
+          <ng-template pTemplate="output">
+            {{room.roomType}}
+          </ng-template>
+        </p-cellEditor>
+      </td>
+      <td><button class="btn-primary" (click)="updateRoom(room)">
+          Update</button></td>
+    </tr>
+  </ng-template>
+</p-table>
