updating code versions

--- a/src/app/adm-home/lookup-management/lookup-management.component.html
+++ b/src/app/adm-home/lookup-management/lookup-management.component.html
@@ -9,7 +9,7 @@
 </div>
 <br>
 <br>
-<p-table #lookupTable *ngIf="viewAll && !createNew" [style]="{'width':'50%','margin-top':'8px'}" [value]="lookupList"
+<p-table #lookupTable *ngIf="viewAll && !createNew" [style]="{'width':'70%','margin-top':'8px'}" [value]="lookupList"
     [globalFilterFields]="['lookupDefName','lookupValue','displayName']" [paginator]="true"
     [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
     [rowsPerPageOptions]="[5, 10,15]" [rows]="10">
@@ -32,9 +32,13 @@
         </tr>
         <tr>
             <th>
-                <input pInputText type="text"
-                    (input)="lookupTable.filter($event.target.value, 'lookupDefName', 'contains')"
-                    placeholder="Definition Name" class="p-column-filter">
+                <p-dropdown [options]="lookupDefinitions"
+                    (onChange)="lookupTable.filter($event.value, 'lookupDefName', 'equals')"
+                    styleClass="p-column-filter" placeholder="Select a Status" [showClear]="true">
+                    <ng-template let-option pTemplate="item">
+                        <span>{{option.label}}</span>
+                    </ng-template>
+                </p-dropdown>
             </th>
             <th>
                 <input pInputText type="text"
@@ -46,8 +50,18 @@
                     (input)="lookupTable.filter($event.target.value, 'displayName', 'contains')"
                     placeholder="Display Name" class="p-column-filter">
             </th>
-            <th></th>
-            <th></th>
+            <th>
+                <p-calendar (onSelect)="onDateSelect($event)"
+                    (onClearClick)="lookupTable.filter('', 'date', 'createdDate')" [showButtonBar]="true"
+                    styleClass="p-column-filter" placeholder="Created Date" [readonlyInput]="true">
+                </p-calendar>
+            </th>
+            <th>
+                <p-calendar (onSelect)="onDateSelect($event)"
+                    (onClearClick)="lookupTable.filter('', 'date', 'updatedDate')" [showButtonBar]="true"
+                    styleClass="p-column-filter" placeholder="Updated Date" [readonlyInput]="true">
+                </p-calendar>
+            </th>
             <th></th>
             <th></th>
         </tr>
@@ -58,7 +72,7 @@
                 <p-cellEditor>
                     <ng-template pTemplate="input">
                         <p-dropdown [options]="lookupDefinitions" [(ngModel)]="lookup.lookupDefName"
-                            [style]="{'width':'100%'}">
+                            [style]="{'width':'auto', 'height':'auto'}">
                         </p-dropdown>
                     </ng-template>
                     <ng-template pTemplate="output">
@@ -87,9 +101,9 @@
                 </p-cellEditor>
             </td>
             <td pEditableColumn>
-                {{lookup.createdDate === null ? "" : lookup.createdDate| date:'dd MMM, yyyy'}}
+                {{lookup.createdDate === null ? "" : lookup.createdDate| date:'dd-MMM-yyyy'}}
             </td>
-            <td pEditableColumn>{{lookup.updateDate === null ? "" : lookup.updateDate| date:'dd MMM, yyyy'}}</td>
+            <td pEditableColumn>{{lookup.updateDate === null ? "" : lookup.updateDate| date:'dd-MMM-yyyy'}}</td>
             <td style="text-align:center">
                 <button class="btn-primary" (click)="toggleDelete(lookup.lookupId)">
                     <div *ngIf="lookup.deleted != 'Y'">Delete</div>
