--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,11 +1,13 @@
-<div class="float-right">
+<br>
+<div style="padding-left: 1.5%">
   <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <table class="table table-striped table-hover" style="width: 25rem;">
       <tr>
         <td colspan="2">
           <div class="form-group">
-            <input type="text" formControlName="custName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.custName.errors }"
-              name="custName" id="custName" placeholder="Your Good Name Please.." style="width: 100%;">
+            <input type="text" formControlName="custName" class="form-control"
+              [ngClass]="{ 'is-invalid': submitted && f.custName.errors }" name="custName" id="custName"
+              placeholder="Your Good Name Please.." style="width: 100%;">
             <div *ngIf="submitted && f.custName.errors" class="invalid-feedback">
               <div *ngIf="f.custName.errors.required">Name is required</div>
             </div>
@@ -15,34 +17,32 @@
       <tr>
         <td colspan="2">
           <div class="form-group">
-            <input type="text" formControlName="userName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.userName.errors }"
-              id="userName" placeholder="Pick a username.." style="width: 100%;">
+            <input type="text" formControlName="userName" class="form-control"
+              [ngClass]="{ 'is-invalid': submitted && f.userName.errors }" id="userName" placeholder="Pick a username.."
+              style="width: 100%;">
             <div *ngIf="submitted && f.userName.errors" class="invalid-feedback">
               <div *ngIf="f.userName.errors.required">User Name is required</div>
             </div>
           </div>
         </td>
-      </tr>      
+      </tr>
       <tr>
         <td>
           <div class="form-group">
-          <input type="date" title="Date of Birth" formControlName="custDob" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.custDob.errors }" id="custDob">
-          <div *ngIf="submitted && f.custDob.errors" class="invalid-feedback">
+            <input type="date" title="Date of Birth" formControlName="custDob" class="form-control"
+              [ngClass]="{ 'is-invalid': submitted && f.custDob.errors }" id="custDob">
+            <div *ngIf="submitted && f.custDob.errors" class="invalid-feedback">
               <div *ngIf="f.custDob.errors.required">Date Of Birth is required</div>
             </div>
           </div>
         </td>
         <td>
           <div class="form-group">
-          
-              <select name="custGen"  formControlName="custGen" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.custGen.errors }" >                
-                <option value="">Gender</option>
-                <option value="female">Female</option>
-                <option value="Male">Male</option>
-                <option value="trans">Trans</option>
-              </select>
-              
-              <div *ngIf="submitted && f.custGen.errors" class="invalid-feedback">
+            <p-dropdown [options]="genderLookup" [ngClass]="{ 'is-invalid': submitted && f.custGen.errors }"
+              formControlName="custGen" optionLabel="displayName" optionValue="lookupValue"
+              [style]="{'width':'auto', 'height':'auto'}">
+            </p-dropdown>
+            <div *ngIf="submitted && f.custGen.errors" class="invalid-feedback">
               <div *ngIf="f.custGen.errors.required">Gender is required</div>
             </div>
           </div>
@@ -51,7 +51,8 @@
       <tr>
         <td colspan="2">
           <div class="form-group">
-            <input type="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.custMail.errors }" formControlName="custMail" id="custMail" placeholder="email" style="width: 100%;">
+            <input type="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.custMail.errors }"
+              formControlName="custMail" id="custMail" placeholder="email" style="width: 100%;">
             <div *ngIf="submitted && f.custMail.errors" class="invalid-feedback">
               <div *ngIf="f.custMail.errors.required">Mail Id is required</div>
             </div>
@@ -61,7 +62,8 @@
       <tr>
         <td colspan="2">
           <div class="form-group">
-            <input type="tel" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.custMob.errors }" id="custMob" formControlName="custMob" placeholder="MobileNumber" style="width: 100%;">
+            <input type="tel" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.custMob.errors }"
+              id="custMob" formControlName="custMob" placeholder="MobileNumber" style="width: 100%;">
             <div *ngIf="submitted && f.custMob.errors" class="invalid-feedback">
               <div *ngIf="f.custMob.errors.required">Mobile Number is required</div>
             </div>
@@ -70,25 +72,28 @@
       </tr>
       <tr>
         <td colspan="2">
-            <div class="form-group">
-          <input type="password" formControlName="custPass" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.custPass.errors }" name="custPass" id="custPass"
-            placeholder="Password" style="width: 100%;">
-          <div *ngIf="submitted && f.custPass.errors" class="invalid-feedback">
-            <div *ngIf="f.custPass.errors.required">Password is required</div>
-            <div *ngIf="f.custPass.errors.minlength">Password must be at least 6 characters</div>
-          </div>
+          <div class="form-group">
+            <input type="password" formControlName="custPass" class="form-control"
+              [ngClass]="{ 'is-invalid': submitted && f.custPass.errors }" name="custPass" id="custPass"
+              placeholder="Password" style="width: 100%;">
+            <div *ngIf="submitted && f.custPass.errors" class="invalid-feedback">
+              <div *ngIf="f.custPass.errors.required">Password is required</div>
+              <div *ngIf="f.custPass.errors.minlength">Password must be at least 6 characters</div>
+            </div>
           </div>
         </td>
       </tr>
       <tr>
         <td colspan="2">
-            <div class="form-group">
-          <input type="password"  formControlName="custRepass" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.custRepass.errors }"id="custRepass" placeholder="Re-Type Password" style="width: 100%;">        
-          <div *ngIf="submitted && f.custRepass.errors" class="invalid-feedback">
+          <div class="form-group">
+            <input type="password" formControlName="custRepass" class="form-control"
+              [ngClass]="{ 'is-invalid': submitted && f.custRepass.errors }" id="custRepass"
+              placeholder="Re-Type Password" style="width: 100%;">
+            <div *ngIf="submitted && f.custRepass.errors" class="invalid-feedback">
               <div *ngIf="f.custRepass.errors.required">Password is required</div>
               <div *ngIf="f.custRepass.errors.minlength">Password must be at least 6 characters</div>
             </div>
-            </div>
+          </div>
         </td>
       </tr>
       <tr>
